--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,25 @@ server:
 spring:
   data:
     mongodb:
-      host: localhost
+      host: ${HOST_ETSTUR}
       port: 27017
       database: EtsTurDB
       username: tatiluser
       password: tatiluser*
+  mail:
+    username: ${mail_username}
+    password: ${mail_password}
+    host: smtp.gmail.com
+    port: 587
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+
+
 
 
 
